--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jest-environment-jsdom": "^29.3.1",
     "postcss": "^8.4.20",
     "sass": "^1.57.1",
+    "storybook-addon-sass-postcss": "^0.1.3",
     "tailwindcss": "^3.2.4"
   }
 }
