--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "sass": "^1.57.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
@@ -45,7 +46,6 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "sass": "^1.57.1",
     "tailwindcss": "^3.2.4"
   }
 }
